# picors

./: Cargo.toml  Embed.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: error.rs  main.rs
src/tasks/: background.rs
