[package]
edition = "2021"
name = "picomqtt"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cyw43 = "0.2.0"
cyw43-pio = "0.2.0"

cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.3"

embassy-rp = {version = "0.2.0", features = ["critical-section-impl", "time-driver", "defmt", "intrinsics" ]}
embassy-time = {version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"]}
embassy-executor = {version = "0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-net = {version = "0.4.0", features = ["defmt", "proto-ipv4", "medium-ip", "tcp"]}

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = "2.1.0"
portable-atomic = {version = "1.5", features = ["critical-section"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
